@@ -317,6 +317,16 @@ void add_abilities(object *op, const object *change) {
             object_set_value(op, "identified_animation", buf, 1);
         }
     }
+    
+    /**
+     * For items that do not need identifying, use their identified face/animation
+     * immediately. This should make seas of generated creatures look more interesting.
+     *
+     * Daniel Hawkins
+     * 2018-01-07
+     */
+    if (!need_identify(op))
+        object_give_identified_properties(op);
 
     for (i = 0; i < NUM_STATS; i++)
         change_attr_value(&(op->stats), i, get_attr_value(&(change->stats), i));
