@@ -1,3 +1,9 @@
+2018-01-07  Daniel Hawkins
+    * common/artifact.c: Make artifacts of items that do not need identifying
+      appear using their identified face and animation. In particular, this makes
+      the randomly-generated tougher monsters (e.g. goblin leaders) differtiable
+      from the normal monsters in the room.
+
 2018-01-02  Daniel Hawkins
     * server/shop.c: Make shop pricing treat unidentified items as if they were
       the normal version of the item. Fixes Bug #812.
